@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 17-10-2004 fixed: mplayer leaks memory (next partial fix) audio render wasn't being freed
   - 19-10-2004 fixed: memleaks in RSS feed reader
   - 19-10-2004 fixed: possible memleak in filezilla
   - 19-10-2004 fixed: [ 1049621 ] hdd spindown broken
